fix: System update messages are not sent to all group recipients