@@ -52,7 +52,6 @@ import org.hisp.dhis.user.UserStore;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
@@ -206,21 +205,21 @@ public class SystemUpdateService
     {
         Set<User> recipients = getRecipients();
 
-        for ( Map.Entry<Semver, Map<String, String>> entry : patchVersions.entrySet() )
+        for ( Map.Entry<Semver, Map<String, String>> versionEntry : patchVersions.entrySet() )
         {
-            Semver version = entry.getKey();
-            Map<String, String> message = entry.getValue();
+            Semver version = versionEntry.getKey();
+            Map<String, String> message = versionEntry.getValue();
 
-            for ( User recipient : recipients )
+            // Check if message has been sent before using
+            // version.getValue() as extMessageId
+            List<MessageConversation> existingMessages = messageService.getMatchingExtId( version.getValue() );
+
+            if ( existingMessages.isEmpty() )
             {
-                // Check if message has been sent before using
-                // version.getValue() as extMessageId
-                List<MessageConversation> existingMessages = messageService.getMatchingExtId( version.getValue() );
-
-                if ( existingMessages.isEmpty() )
+                for ( User recipient : recipients )
                 {
                     MessageConversationParams params = new MessageConversationParams.Builder()
-                        .withRecipients( ImmutableSet.of( recipient ) )
+                        .withRecipients( Set.of( recipient ) )
                         .withSubject( NEW_VERSION_AVAILABLE_MESSAGE_SUBJECT )
                         .withText( buildMessageText( message ) )
                         .withMessageType( MessageType.SYSTEM )
@@ -237,7 +236,7 @@ public class SystemUpdateService
         Set<User> recipients = messageService.getSystemUpdateNotificationRecipients();
 
         // Fallback to fetching all users with ALL authority for our recipient
-        // list.
+        // list if no explicit recipients group are set.
         return !recipients.isEmpty() ? recipients : getUsersWithAllAuthority();
     }
 
